# opencv-jetson

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_yolo.sh
